--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ABBDC5</color>
+    <color name="colorPrimaryDark">#2E3B40</color>
+    <color name="colorAccent">#4FC3F7</color>
+
+    <color name="text_hint">#ABBDC5</color>
+
+    <color name="brand_text_color_accent">#FB8C00</color>
+    <color name="brand_text_color_primary">#4FC3F7</color>
+
+    <!-- edit text -->
+    <color name="edit_text_rounded_corner_enable_border">#ABBDC5</color>
+    <color name="edit_text_rounded_corner_focused_border">#4FC3F7</color>
+    <!-- end: edit text -->
+
+    <!-- start: button door colors -->
+    <color name="bt_door_outer_ring_locked_stroke">#60222222</color>
+    <color name="bt_door_outer_ring_locked_background">#00FD23</color>
+    <color name="bt_door_inner_ring_locked_stroke">#8000FD23</color>
+    <color name="bt_door_inner_ring_locked_background">#222222</color>
+
+    <color name="bt_door_outer_ring_open_stroke">#60222222</color>
+    <color name="bt_door_outer_ring_open_background">#FD0000</color>
+    <color name="bt_door_inner_ring_open_stroke">#80FD0000</color>
+    <color name="bt_door_inner_ring_open_background">#222222</color>
+
+    <!-- end: button door colors -->
+
+
 </resources>
