--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,14 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
+
+    <dimen name="app_name_xl">24sp</dimen>
+    <dimen name="app_name_md">20</dimen>
+    <dimen name="app_name_sm">16</dimen>
+
+    <dimen name="bt_door_outer_ring_padding">8dp</dimen>
+    <dimen name="bt_door_outer_ring_stroke">1dp</dimen>
+    <dimen name="bt_door_inner_ring_padding">32dp</dimen>
+    <dimen name="bt_door_inner_ring_stroke">1dp</dimen>
 </resources>
