--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,42 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="color">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorSecondary">@color/colorAccent</item>
     </style>
+
+    <style name="AppTheme.Dark">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="editTextStyle">@style/AppTheme.Dark.EditText</item>
+        <item name="buttonStyle">@style/AppTheme.Dark.Button</item>
+    </style>
+
+    <style name="AppTheme.Dark.Brand">
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="AppTheme.Dark.EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textColorHint">@color/text_hint</item>
+        <item name="android:background">@drawable/selector_edit_text</item>
+    </style>
+
+    <style name="AppTheme.Dark.Button" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/selector_button</item>
+        <item name="android:foreground">?selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">#000</item>
+        <item name="android:backgroundTint">#333</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
