--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -13,11 +13,11 @@
         android:layout_marginBottom="@dimen/activity_dashboard_header_bottom_margin"
         android:background="@drawable/bg_header"
         android:gravity="center_horizontal"
-        android:padding="@dimen/activity_dashboard_header_padding"
-        android:theme="@style/AppTheme.Brand.Dark">
+        android:padding="@dimen/activity_dashboard_header_padding">
 
         <include
             layout="@layout/fragment_brand"
+            android:theme="@style/AppTheme.Dashboard.Brand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -108,6 +108,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_dashboard_field_margin_vertical"
+        android:paddingStart="@dimen/activity_dashboard_field_margin_horizontal"
+        android:paddingEnd="@dimen/activity_dashboard_field_margin_horizontal"
         android:layout_weight="1"
         android:background="@drawable/bg_footer">
 
@@ -119,7 +121,7 @@
             app:layout_constraintEnd_toStartOf="@id/fragCommandButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25">
+            app:layout_constraintVertical_bias="0.2">
 
             <include layout="@layout/activity_dashboard_fragment_indicator" />
         </FrameLayout>
@@ -132,7 +134,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/fragCommandButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25">
+            app:layout_constraintVertical_bias="0.2">
 
             <include layout="@layout/activity_dashboard_fragment_indicator" />
         </FrameLayout>
