--- a/app/src/main/res/values-h320dp-ldpi/dimens.xml
+++ b/app/src/main/res/values-h320dp-ldpi/dimens.xml
@@ -18,7 +18,8 @@
     <!-- end: fragment_indicator -->
 
     <!-- start: activity_login -->
-    <dimen name="activity_login_field_margin">32dp</dimen>
+    <dimen name="activity_login_brand_text_size">32sp</dimen>
+    <dimen name="fragment_login_fields_margin_vertical">16dp</dimen>
     <!-- end: activity_login -->
 
     <!-- start: activity_dashboard -->
@@ -31,7 +32,7 @@
     <dimen name="activity_dashboard_field_margin_horizontal">16dp</dimen>
     <dimen name="activity_dashboard_field_margin_vertical">8dp</dimen>
 
-    <dimen name="activity_dashboard_fragment_command_button_background_top_offset">0dp</dimen>
+    <dimen name="activity_dashboard_fragment_command_button_background_top_offset">8dp</dimen>
     <dimen name="activity_dashboard_button_command_width">90dp</dimen>
     <dimen name="activity_dashboard_button_command_height">90dp</dimen>
     <!-- end: activity_login -->
